enabling values=weights^2 distribution

--- a/01_knapsack 2D_exhaustive.ipynb
+++ b/01_knapsack 2D_exhaustive.ipynb
@@ -1,13 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "todo: packages plots (Decision space) with numbers"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -78,12 +71,19 @@
     "\n",
     "MIN_VALUE = 0.1\n",
     "MAX_VALUE = 100\n",
+    "\n",
+    "value_distribution_mode = 'random' # 'squared'\n",
+    "noise_factor = 1./2  # examine results of noise_factor = 0 in 'squared' mode, too!\n",
     "# ---------------\n",
     "\n",
     "np.random.seed(seed)\n",
     "\n",
     "weights = np.abs(np.random.normal(MIN_WEIGHT, MAX_WEIGHT, N_PACKAGES))\n",
-    "values = np.abs(np.random.normal(MIN_VALUE, MAX_VALUE, N_PACKAGES))"
+    "\n",
+    "if 'squared' == value_distribution_mode:\n",
+    "    values = weights ** 2 + (weights ** 2 ).std() * np.random.normal(0, noise_factor, len(weights))\n",
+    "elif 'random' == value_distribution_mode:\n",
+    "    values = np.abs(np.random.normal(MIN_VALUE, MAX_VALUE, N_PACKAGES))"
    ]
   },
   {
@@ -735,14 +735,22 @@
     }
    ],
    "source": [
-    "npanels = len(idxs_pareto)\n",
+    "max_panels = 8\n",
+    "if len(idxs_pareto) > max_panels:\n",
+    "    np.random.seed(seed)\n",
+    "    idxs_pareto_plot = np.random.choice(idxs_pareto, max_panels, replace=False)\n",
+    "else:\n",
+    "    idxs_pareto_plot = idxs_pareto\n",
+    "    \n",
+    "npanels = len(idxs_pareto_plot)\n",
+    "\n",
     "\n",
     "ncols = 4\n",
     "nrows = npanels // ncols + np.sum( (npanels % ncols) != 0)\n",
     "\n",
     "plt.figure(figsize = (5 * ncols, 5 * nrows))\n",
     "\n",
-    "for ipanel, idx_pareto in enumerate(idxs_pareto):\n",
+    "for ipanel, idx_pareto in enumerate(idxs_pareto_plot):\n",
     "    plt.subplot(nrows, ncols, ipanel + 1)\n",
     "    \n",
     "    idx_packages_pareto = knapsacks[idx_pareto]['packages']\n",
@@ -761,16 +769,14 @@
     "        else:\n",
     "            plt.annotate(f'{idx_package:02.0f}', xy=(package['weight'], package['value']), alpha=0.2)\n",
     "    \n",
-    "    title = f'pareto knapsack #{ipanel + 1}'\n",
+    "    title = f'knapsack {idx_pareto}'\n",
     "    title += f'\\nweight:{knapsacks[idx_pareto][\"weight\"]:0.1f}, value:{knapsacks[idx_pareto][\"value\"]:0.1f}'\n",
     "    plt.title(title)\n",
     "    plt.xlabel('weight [kg]')\n",
     "    plt.ylabel('value [£]')\n",
     "    \n",
     "\n",
-    "plt.tight_layout()\n",
-    "    \n",
-    "    "
+    "plt.tight_layout()"
    ]
   },
   {
@@ -850,10 +856,18 @@
   },
   "toc": {
    "base_numbering": 1,
+   "colors": {
+    "hover_highlight": "#DAA520",
+    "running_highlight": "#FF0000",
+    "selected_highlight": "#FFD700"
+   },
+   "moveMenuLeft": true,
    "nav_menu": {},
+   "navigate_menu": true,
    "number_sections": true,
    "sideBar": true,
    "skip_h1_title": false,
+   "threshold": 4,
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
@@ -864,7 +878,8 @@
     "width": "272.003px"
    },
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": true,
+   "widenNotebook": false
   }
  },
  "nbformat": 4,
