--- a/02_knapsack_2D_stochastic.ipynb
+++ b/02_knapsack_2D_stochastic.ipynb
@@ -62,19 +62,26 @@
    "source": [
     "seed = 3141592653\n",
     "\n",
-    "N_PACKAGES = 100 # note here we are using double the amount of packages than in the previous tutorial\n",
+    "N_PACKAGES = 20\n",
     "\n",
     "MIN_WEIGHT = 0.1\n",
     "MAX_WEIGHT = 10\n",
     "\n",
     "MIN_VALUE = 0.1\n",
     "MAX_VALUE = 100\n",
+    "\n",
+    "value_distribution_mode = 'random' # 'squared'\n",
+    "noise_factor = 1./2  # examine results of noise_factor = 0 in 'squared' mode, too!\n",
     "# ---------------\n",
     "\n",
     "np.random.seed(seed)\n",
     "\n",
     "weights = np.abs(np.random.normal(MIN_WEIGHT, MAX_WEIGHT, N_PACKAGES))\n",
-    "values = np.abs(np.random.normal(MIN_VALUE, MAX_VALUE, N_PACKAGES))"
+    "\n",
+    "if 'squared' == value_distribution_mode:\n",
+    "    values = weights ** 2 + (weights ** 2 ).std() * np.random.normal(0, noise_factor, len(weights))\n",
+    "elif 'random' == value_distribution_mode:\n",
+    "    values = np.abs(np.random.normal(MIN_VALUE, MAX_VALUE, N_PACKAGES))"
    ]
   },
   {
@@ -607,7 +614,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Evolutionary Algorithm"
+    "# Genetic Algorithm Components"
    ]
   },
   {
@@ -1210,7 +1217,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Optimisation Algorithm\n",
+    "# Knacksack Optimisation\n",
     "\n",
     "Putting it all together"
    ]
