ensuring non negative package values

--- a/02_knapsack_2D_stochastic.ipynb
+++ b/02_knapsack_2D_stochastic.ipynb
@@ -79,7 +79,9 @@
     "weights = np.abs(np.random.normal(MIN_WEIGHT, MAX_WEIGHT, N_PACKAGES))\n",
     "\n",
     "if 'squared' == value_distribution_mode:\n",
-    "    values = weights ** 2 + (weights ** 2 ).std() * np.random.normal(0, noise_factor, len(weights))\n",
+    "    values =  weights ** 2 \n",
+    "    values += values * np.random.normal(0, noise_factor, len(weights))\n",
+    "    values = np.abs(values)\n",
     "elif 'random' == value_distribution_mode:\n",
     "    values = np.abs(np.random.normal(MIN_VALUE, MAX_VALUE, N_PACKAGES))"
    ]
