--- a/01_knapsack 2D_exhaustive.ipynb
+++ b/01_knapsack 2D_exhaustive.ipynb
@@ -392,7 +392,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Solving With Single Objective Optimisation"
+    "# Solving With 1D Approach \n",
+    "\n",
+    "## Single Objective Optimisation"
    ]
   },
   {
@@ -520,11 +522,11 @@
    ],
    "source": [
     "plt.scatter(knapsacks[iknapsack_soo]['weight'], knapsacks[iknapsack_soo]['value'], \n",
-    "            marker='x', s=100, alpha=0.7, label='Single Objective Optimal')\n",
+    "            marker='x', s=100, alpha=0.9, label='Single Objective', color='black', linewidth=3)\n",
     "\n",
     "plt.scatter([knapsacks[idx]['weight'] for idx in knapsacks], \n",
     "            [knapsacks[idx]['value'] for idx in knapsacks], \n",
-    "            alpha=0.4, c=np.array(list(knapsacks_soh.values())), cmap='viridis')\n",
+    "            alpha=0.1, c=np.array(list(knapsacks_soh.values())), cmap='viridis')\n",
     "\n",
     "#\n",
     "\n",
@@ -532,7 +534,61 @@
     "plt.ylabel('value [£]')\n",
     "plt.title('Knapsacks')\n",
     "plt.colorbar(label='Single Objective Heuristic')\n",
-    "plt.legend()"
+    "plt.legend(title='1D Optimal Solutions')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Solving With Linear Search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def linear_search_2d(knapsacks, objective1, objective2, top1=5, top2=1, reverse1=True, reverse2=True):\n",
+    "    knapsacks_sorted = {k: v for k, v in sorted(knapsacks.items(), key=lambda knapsack: knapsack[1][objective1], reverse=reverse1)} # 1 means value as opposed to key\n",
+    "    knapsacks_sorted_limited = {k: v for idx, (k, v) in enumerate(knapsacks_sorted.items()) if idx < top1}\n",
+    "    knapsacks_sorted_limited_optimal = {k: v for idx, (k, v) in enumerate(sorted(knapsacks_sorted_limited.items(), key=lambda knapsack: knapsack[1][objective2], reverse=reverse2)) if idx < top2}\n",
+    "    \n",
+    "    return list(knapsacks_sorted_limited_optimal.keys())\n",
+    " \n",
+    "linear_value_first = linear_search_2d(knapsacks, 'value', 'weight', reverse1=True, reverse2=False, top1=5, top2=1)\n",
+    "linear_weight_first = linear_search_2d(knapsacks, 'weight', 'value', reverse1=False, reverse2=True, top1=5, top2=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter(knapsacks[iknapsack_soo]['weight'], knapsacks[iknapsack_soo]['value'], \n",
+    "            marker='x', s=100, alpha=0.9, label='Single Objective', color='black', linewidth=3)\n",
+    "\n",
+    "plt.scatter(knapsacks[linear_weight_first[0]]['weight'], knapsacks[linear_weight_first[0]]['value'], \n",
+    "            marker='v', s=100, alpha=0.9, label='Weight First', color='black')\n",
+    "\n",
+    "plt.scatter(knapsacks[linear_value_first[0]]['weight'], knapsacks[linear_value_first[0]]['value'], \n",
+    "            marker='^', s=100, alpha=0.9, label='Value First', color='black')\n",
+    "\n",
+    "\n",
+    "\n",
+    "plt.scatter([knapsacks[idx]['weight'] for idx in knapsacks], \n",
+    "            [knapsacks[idx]['value'] for idx in knapsacks], \n",
+    "            alpha=0.1, c=np.array(list(knapsacks_soh.values())), cmap='viridis')\n",
+    "\n",
+    "#\n",
+    "\n",
+    "plt.xlabel('weight [kg]')\n",
+    "plt.ylabel('value [£]')\n",
+    "plt.title('Knapsacks')\n",
+    "plt.colorbar(label='Single Objective Heuristic')\n",
+    "plt.legend(title='1D Optimal Solutions')"
    ]
   },
   {
