exact_n_selection=True runs much faster

--- a/02_knapsack_2D_stochastic.ipynb
+++ b/02_knapsack_2D_stochastic.ipynb
@@ -1443,7 +1443,7 @@
     }
    ],
    "source": [
-    "population_all = knapsack_genetic_algorithm(20, seed=1)"
+    "population_all = knapsack_genetic_algorithm(20, seed=1, exact_n_selection=True)"
    ]
   },
   {
