--- a/01_knapsack 2D_exhaustive.ipynb
+++ b/01_knapsack 2D_exhaustive.ipynb
@@ -642,7 +642,7 @@
     }
    ],
    "source": [
-    "mode_to_operator = {'min': greater_than, 'max': less_than}\n",
+    "mode_to_operator = {'min': less_than, 'max': greater_than}\n",
     "\n",
     "objective_mode = {'weight': 'min', 'value': 'max'}\n",
     "\n",
@@ -693,35 +693,72 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Pareto Front Pseudo Code**  \n",
+    "Assuming a `knapsack` object with keys `weight`, `value`.  \n",
+    "This code aims at finding the Pareto Front that minimises for `weight` and maximises for `value`.  \n",
+    "We aim to create a list of knapsacks that consist of the Pareto Front called `pareto_front`.  \n",
+    "\n",
+    "\n",
+    "```\n",
+    "pareto_front = []\n",
+    "\n",
+    "for this_knapsack in knapsacks:\n",
+    "    is_pareto = True   # we assume knapsack on the Pareto Front until proven otherwise\n",
+    "    \n",
+    "    other_knapsacks = knapsacks.remove(this_knapsack)\n",
+    "    \n",
+    "    for other_knapsack in other_knapsacks:\n",
+    "        # Does `other_knapsack` dominate `this_knapsack`?  \n",
+    "        other_dominates  = this_knapsack['weight'] > other_knapsacks['weight']\n",
+    "        other_dominates &= this_knapsack['value'] < other_knapsacks['value']\n",
+    "        \n",
+    "        if other_dominates:\n",
+    "            # knapsack dominated by at least one other knapsack, hence not pareto optimal\n",
+    "            is_pareto = False\n",
+    "            break  #  no need to compare with the rest of the other knapsacks\n",
+    "            \n",
+    "    if is_pareto:\n",
+    "        pareto_front.append(this_knapsack)\n",
+    "        \n",
+    "\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-11T05:40:27.856854Z",
-     "start_time": "2020-09-11T05:40:23.313562Z"
+     "start_time": "2020-10-10T11:54:15.020Z"
     }
    },
    "outputs": [],
    "source": [
-    "idxs_pareto = []\n",
+    "idxs_pareto = [] \n",
     "\n",
     "for idx in range(len(objective_values[objective])):\n",
-    "    is_dominated = False\n",
+    "    is_pareto = True  #  we assume on Pareto Front until proven otherwise\n",
     "    \n",
+    "    # objective values of this knapsack\n",
     "    this_weight = objective_values['weight'][idx]\n",
     "    this_value = objective_values['value'][idx]\n",
     "    \n",
+    "    # objective values of all the other knapsacks\n",
     "    other_weights = np.array(objective_values['weight'][:idx] + objective_values['weight'][idx + 1:])\n",
     "    other_values = np.array(objective_values['value'][:idx] + objective_values['value'][idx + 1:])\n",
     "    \n",
     "    for jdx in range(len(other_weights)):\n",
-    "        bool_ = objective_operator['weight'](this_weight, other_weights[jdx]) & objective_operator['value'](this_value, other_values[jdx])   \n",
+    "        other_dominates = objective_operator['weight'](other_weights[jdx], this_weight) & objective_operator['value'](other_values[jdx], this_value)   \n",
     "        \n",
-    "        if bool_:\n",
-    "            is_dominated = True\n",
-    "            break\n",
+    "        if other_dominates:\n",
+    "            #  knapsack dominated by at least another, hence not pareto optimal.\n",
+    "            is_pareto = False\n",
+    "            break  #  no need to compare with the rest of the other knapsacks\n",
     "            \n",
-    "    if not is_dominated:\n",
+    "    if is_pareto:\n",
     "        idxs_pareto.append(idx)"
    ]
   },
