some more annotations. Google Colab buttons

--- a/01_knapsack 2D_exhaustive.ipynb
+++ b/01_knapsack 2D_exhaustive.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook may be used in Google Colab. To access press this button:\n",
+    "\n",
+    "<a href=\"https://colab.research.google.com/github/elzurdo/multi_objective_optimisation/blob/master/01_knapsack%202D_exhaustive.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"First: Open In Colab\"/></a>\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -595,14 +604,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# A Few Words About Subjectivity"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Solving With Pareto Optimisation"
+    "# Pareto Front"
    ]
   },
   {
@@ -807,6 +809,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's examine the packages of the Pareto optimal knapsacks.  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 53,
    "metadata": {
@@ -880,20 +889,26 @@
    "source": [
     "# Decision Making With Pareto Fronts\n",
     "\n",
-    "Role of domain expert. \n",
+    "Once the Pareto Front is identified it is your job as the analyst to present \n",
+    "these results to the domain expert to discuss the next steps of the experiment/process.  \n",
+    "(Note: you the analyst might be that domain expert!*  \n",
     "\n",
-    "You might be that expert!  (annecdotal related video: The Expert)\n",
     "\n",
-    "Depends on: \n",
-    "* How many solutions can be used. E.g, how many knapsack carriers do you have?  \n",
-    "* After seeing the exhaustive solution space how the domain expert might weigh the objectives. \n"
+    "Most likely the domain expert will weigh in a subjective decision which will be depend on:\n",
+    "* How many solutions can be used for the next step. In our example, you might have four knapsack carriers, so you will want to give each one knapsack.   \n",
+    "* After seeing the exhaustive solution space how the domain expert might weigh the objectives. \n",
+    "\n",
+    "\n",
+    "*For your own amusement (and education) I highly recommend watching [The Expert](https://www.youtube.com/watch?v=ObA9WGiQqLY&ab_channel=Adnan). This was recommended to me in my transition from academia to the private sector, and is an excellent life lesson on (mis)communication.  \n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Rerun With A Larger Search Space?"
+    "# Rerun With A Larger Search Space?\n",
+    "\n",
+    "In reality, however, you will deal with a much larger combinatorial space. "
    ]
   },
   {
@@ -928,6 +943,17 @@
     "n_combinations = factorial(n)/factorial(k)/factorial(n-k)\n",
     "\n",
     "f'There are {pretty_int(n_combinations)} combinations of {n} choose {k}.'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the case of a large intractable objective space we will need to use a stochastic method to navigate the combinatorial space.  \n",
+    "\n",
+    "We will explore this in the next tutorial, which is accessible in Google Colab. To access press this button: \n",
+    "\n",
+    "<a href=\"https://colab.research.google.com/github/elzurdo/multi_objective_optimisation/blob/master/02_knapsack_2D_stochastic.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"First: Open In Colab\"/></a>"
    ]
   }
  ],
