--- a/02_knapsack_2D_stochastic.ipynb
+++ b/02_knapsack_2D_stochastic.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook may be used in Google Colab. To access press this button:    \n",
+    "<a href=\"https://colab.research.google.com/github/elzurdo/multi_objective_optimisation/blob/master/02_knapsack_2D_stochastic.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"First: Open In Colab\"/></a>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 148,
    "metadata": {
@@ -46,7 +54,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data"
+    "# Data\n",
+    "\n",
+    "Here we setup our problem of solving for the knapsack problem in an exhaustive search space. \n",
+    "\n",
+    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/f/fd/Knapsack.svg\" width=\"300\">\n",
+    "\n",
+    " * `packages` a dictionary containing information of the `N_PACKAGES` packages.\n",
+    " It has the form `{key: package}`, where each package have the form `{'weight': weight, 'value': value}`\n",
+    " \n",
+    " * `value_distribution_mode` The distribtuions of the package `weight` and `value` values is determined. Feel free to examine differences between `value_distribution_mode='random'` and `'squared'`, or create you own distributions by determining the relationship beween `weights` and `values`.\n",
+    "\n"
    ]
   },
   {
@@ -249,7 +267,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Defining the Objective Space"
+    "# Defining the Objective Space\n",
+    "\n",
+    "* The `knapsack_objective` function determines the knapsack objective value (`weight`, `value`) by summing those of all its `packages`.  \n",
+    "* The `create_knapsacks` function creates `n_knapsacks`. "
    ]
   },
   {
