clarifying pseudo code

--- a/01_knapsack 2D_exhaustive.ipynb
+++ b/01_knapsack 2D_exhaustive.ipynb
@@ -699,10 +699,9 @@
    "metadata": {},
    "source": [
     "**Pareto Front Pseudo Code**  \n",
-    "Assuming a `knapsack` object with keys `weight`, `value`.  \n",
-    "This code aims at finding the Pareto Front that minimises for `weight` and maximises for `value`.  \n",
-    "We aim to create a list of knapsacks that consist of the Pareto Front called `pareto_front`.  \n",
     "\n",
+    "* Input: `knapsacks` is a list of knapsack objects each with properties `weight`, `value`.  \n",
+    "* Output: `pareto_front` is subset list of  `knapsacks` containing Pareto optimal solutions that minimises  `weight` and maximises `value`.  \n",
     "\n",
     "```\n",
     "pareto_front = []\n",
