minor additions for clarity

--- a/01_knapsack 2D_exhaustive.ipynb
+++ b/01_knapsack 2D_exhaustive.ipynb
@@ -459,7 +459,9 @@
    "source": [
     "plt.hist(list(knapsacks_soh.values()), alpha=0.4, color='purple')\n",
     "plt.xlabel('Value/Weight [£/kg]')\n",
-    "plt.title('Knapsack Single Objective Heuristic')"
+    "plt.title('Knapsack Single Objective Heuristic')\n",
+    "plt.yscale('log')\n",
+    "plt.ylabel('Knapsacks')"
    ]
   },
   {
@@ -703,7 +705,8 @@
     "* Input: `knapsacks` is a list of knapsack objects each with properties `weight`, `value`.  \n",
     "* Output: `pareto_front` is subset list of  `knapsacks` containing Pareto optimal solutions that minimises  `weight` and maximises `value`.  \n",
     "\n",
-    "```\n",
+    "Pseduo Code: \n",
+    "```python\n",
     "pareto_front = []\n",
     "\n",
     "for this_knapsack in knapsacks:\n",
