--- a/01_knapsack 2D_exhaustive.ipynb
+++ b/01_knapsack 2D_exhaustive.ipynb
@@ -255,7 +255,14 @@
    "source": [
     "# Defining The Decision Space\n",
     "\n",
-    "We decide which knapsack(s) to choose."
+    "In multi-objective optimisation the ***Decision Space*** is defined as the parameters over which the user has control.   \n",
+    "\n",
+    "In the knapsack problem we have control over which packages to put in a knapsack.  \n",
+    "\n",
+    "If our solutions space of possible package combinations is small enough we can brute force our way to \n",
+    "the actual distribution.  That is the objective of this notebook. \n",
+    "\n",
+    "In the subsequent tutorial we will discuss optimising in an intractable solution space.  "
    ]
   },
   {
@@ -280,9 +287,13 @@
    "source": [
     "# Defining The Objective Space\n",
     "\n",
-    "We determine that we want to optimise for two objectives: \n",
+    "In multi-objective optimisation the ***Objective Space*** is defined as the parameters that the user is interested in optimising over.  \n",
+    "\n",
+    "In this tutorial of the knapsack problem we want to optimise for two objectives:    \n",
     "* knapsack value \n",
-    "* knapsack weight  "
+    "* knapsack weight  \n",
+    "\n",
+    "In the default setting we will miminse the knapsack weights and maximise their values, but feel free to play around with these objective later on.  "
    ]
   },
   {
@@ -401,9 +412,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Solving With 1D Approach \n",
-    "\n",
-    "## Single Objective Optimisation"
+    "# Single Objective Optimal "
    ]
   },
   {
@@ -537,14 +546,12 @@
     "\n",
     "plt.scatter([knapsacks[idx]['weight'] for idx in knapsacks], \n",
     "            [knapsacks[idx]['value'] for idx in knapsacks], \n",
-    "            alpha=0.1, c=np.array(list(knapsacks_soh.values())), cmap='viridis')\n",
-    "\n",
-    "#\n",
+    "            alpha=0.7, c=np.array(list(knapsacks_soh.values())), cmap='viridis')\n",
     "\n",
     "plt.xlabel('weight [kg]')\n",
     "plt.ylabel('value [£]')\n",
     "plt.title('Knapsacks')\n",
-    "plt.colorbar(label='Single Objective Heuristic')\n",
+    "plt.colorbar(label='Single Objective Heuristic [£/kg]')\n",
     "plt.legend(title='1D Optimal Solutions')"
    ]
   },
@@ -552,61 +559,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Solving With Linear Search"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def linear_search_2d(knapsacks, objective1, objective2, top1=5, top2=1, reverse1=True, reverse2=True):\n",
-    "    knapsacks_sorted = {k: v for k, v in sorted(knapsacks.items(), key=lambda knapsack: knapsack[1][objective1], reverse=reverse1)} # 1 means value as opposed to key\n",
-    "    knapsacks_sorted_limited = {k: v for idx, (k, v) in enumerate(knapsacks_sorted.items()) if idx < top1}\n",
-    "    knapsacks_sorted_limited_optimal = {k: v for idx, (k, v) in enumerate(sorted(knapsacks_sorted_limited.items(), key=lambda knapsack: knapsack[1][objective2], reverse=reverse2)) if idx < top2}\n",
-    "    \n",
-    "    return list(knapsacks_sorted_limited_optimal.keys())\n",
-    " \n",
-    "linear_value_first = linear_search_2d(knapsacks, 'value', 'weight', reverse1=True, reverse2=False, top1=5, top2=1)\n",
-    "linear_weight_first = linear_search_2d(knapsacks, 'weight', 'value', reverse1=False, reverse2=True, top1=5, top2=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.scatter(knapsacks[iknapsack_soo]['weight'], knapsacks[iknapsack_soo]['value'], \n",
-    "            marker='x', s=100, alpha=0.9, label='Single Objective', color='black', linewidth=3)\n",
-    "\n",
-    "plt.scatter(knapsacks[linear_weight_first[0]]['weight'], knapsacks[linear_weight_first[0]]['value'], \n",
-    "            marker='v', s=100, alpha=0.9, label='Weight First', color='black')\n",
-    "\n",
-    "plt.scatter(knapsacks[linear_value_first[0]]['weight'], knapsacks[linear_value_first[0]]['value'], \n",
-    "            marker='^', s=100, alpha=0.9, label='Value First', color='black')\n",
-    "\n",
-    "\n",
-    "\n",
-    "plt.scatter([knapsacks[idx]['weight'] for idx in knapsacks], \n",
-    "            [knapsacks[idx]['value'] for idx in knapsacks], \n",
-    "            alpha=0.1, c=np.array(list(knapsacks_soh.values())), cmap='viridis')\n",
-    "\n",
-    "#\n",
-    "\n",
-    "plt.xlabel('weight [kg]')\n",
-    "plt.ylabel('value [£]')\n",
-    "plt.title('Knapsacks')\n",
-    "plt.colorbar(label='Single Objective Heuristic')\n",
-    "plt.legend(title='1D Optimal Solutions')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Pareto Front"
+    "# Pareto Optimal\n",
+    "Here you will apply and visualise a Pareto Front algorithm."
    ]
   },
   {
@@ -956,6 +910,60 @@
     "We will explore this in the next tutorial, which is accessible in Google Colab. To access press this button: \n",
     "\n",
     "<a href=\"https://colab.research.google.com/github/elzurdo/multi_objective_optimisation/blob/master/02_knapsack_2D_stochastic.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"First: Open In Colab\"/></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Appendix: Solving With Linear Search\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def linear_search_2d(knapsacks, objective1, objective2, top1=5, top2=1, reverse1=True, reverse2=True):\n",
+    "    knapsacks_sorted = {k: v for k, v in sorted(knapsacks.items(), key=lambda knapsack: knapsack[1][objective1], reverse=reverse1)} # 1 means value as opposed to key\n",
+    "    knapsacks_sorted_limited = {k: v for idx, (k, v) in enumerate(knapsacks_sorted.items()) if idx < top1}\n",
+    "    knapsacks_sorted_limited_optimal = {k: v for idx, (k, v) in enumerate(sorted(knapsacks_sorted_limited.items(), key=lambda knapsack: knapsack[1][objective2], reverse=reverse2)) if idx < top2}\n",
+    "    \n",
+    "    return list(knapsacks_sorted_limited_optimal.keys())\n",
+    " \n",
+    "linear_value_first = linear_search_2d(knapsacks, 'value', 'weight', reverse1=True, reverse2=False, top1=5, top2=1)\n",
+    "linear_weight_first = linear_search_2d(knapsacks, 'weight', 'value', reverse1=False, reverse2=True, top1=5, top2=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter(knapsacks[iknapsack_soo]['weight'], knapsacks[iknapsack_soo]['value'], \n",
+    "            marker='x', s=100, alpha=0.9, label='Single Objective', color='black', linewidth=3)\n",
+    "\n",
+    "plt.scatter(knapsacks[linear_weight_first[0]]['weight'], knapsacks[linear_weight_first[0]]['value'], \n",
+    "            marker='v', s=100, alpha=0.9, label='Weight First', color='black')\n",
+    "\n",
+    "plt.scatter(knapsacks[linear_value_first[0]]['weight'], knapsacks[linear_value_first[0]]['value'], \n",
+    "            marker='^', s=100, alpha=0.9, label='Value First', color='black')\n",
+    "\n",
+    "\n",
+    "\n",
+    "plt.scatter([knapsacks[idx]['weight'] for idx in knapsacks], \n",
+    "            [knapsacks[idx]['value'] for idx in knapsacks], \n",
+    "            alpha=0.1, c=np.array(list(knapsacks_soh.values())), cmap='viridis')\n",
+    "\n",
+    "#\n",
+    "\n",
+    "plt.xlabel('weight [kg]')\n",
+    "plt.ylabel('value [£]')\n",
+    "plt.title('Knapsacks')\n",
+    "plt.colorbar(label='Single Objective Heuristic')\n",
+    "plt.legend(title='1D Optimal Solutions')"
    ]
   }
  ],
