--- a/01_knapsack 2D_exhaustive.ipynb
+++ b/01_knapsack 2D_exhaustive.ipynb
@@ -4,6 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# The Knapsack Problem: Exhaustive Search\n",
+    "\n",
+    "\n",
+    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/f/fd/Knapsack.svg\" width=300>\n",
+    "\n",
+    "Here you will learn about Pareto Fronts.\n",
+    "\n",
+    "\n",
     "This notebook may be used in Google Colab. To access press this button:\n",
     "\n",
     "<a href=\"https://colab.research.google.com/github/elzurdo/multi_objective_optimisation/blob/master/01_knapsack%202D_exhaustive.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"First: Open In Colab\"/></a>\n"
@@ -851,11 +859,31 @@
     "\n",
     "\n",
     "Most likely the domain expert will weigh in a subjective decision which will be depend on:\n",
-    "* How many solutions can be used for the next step. In our example, you might have four knapsack carriers, so you will want to give each one knapsack.   \n",
+    "* The number of solutions may be used for the next step. In our example, you might have four knapsack carriers, so you will want to give each one knapsack.   \n",
     "* After seeing the exhaustive solution space how the domain expert might weigh the objectives. \n",
+    "* The expert might decide to narrow in on solutions in a given regions, or multiple regions or just sample along the Pareto Front.  \n",
     "\n",
     "\n",
-    "*For your own amusement (and education) I highly recommend watching [The Expert](https://www.youtube.com/watch?v=ObA9WGiQqLY&ab_channel=Adnan). This was recommended to me in my transition from academia to the private sector, and is an excellent life lesson on (mis)communication.  \n"
+    "*For your own amusement (and education) I highly recommend watching [The Expert](https://www.youtube.com/watch?v=ObA9WGiQqLY&ab_channel=Adnan). This was recommended to me in my transition from academia to the private sector, and is an excellent life lesson on (mis)communication in a professional environment.  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exhaustive Search Summary\n",
+    "\n",
+    "Here we summarise the lessons from our brute force aproach to exploring the solution space.\n",
+    "\n",
+    "* Exposing all the solutions to the domain expert will enable a wider a more educated decision about the next step of the experiment.\n",
+    "\n",
+    "* If we a-priori go for Single Objective Optimisation we are likely to blindly select a solution that a domain expert might not consider optimal.\n",
+    "\n",
+    "* To avoid this issue it is better to make the subjective decision of one (or more) optimal after exploring the full solution space.\n",
+    "\n",
+    "* A useful tool for decision makeing is The Pareto Front, a set of equally-optimal trade-off solutions.  \n",
+    "\n",
+    "* A solution is Pareto Optimal if it is not dominated by any other solution in all objectives.  \n"
    ]
   },
   {
@@ -864,7 +892,11 @@
    "source": [
     "# Rerun With A Larger Search Space?\n",
     "\n",
-    "In reality, however, you will deal with a much larger combinatorial space. "
+    "In this tutorial we focused on learning about the Pareto Front in a setting where we have access to the full solution space.  \n",
+    "\n",
+    "In reality, however, you will deal with a much larger combinatorial spaces.  \n",
+    "\n",
+    "Play around with this calculator to see how large Knapsack problem is be modfiying `N_PACKAGES` and `N_PACKAGES_PER_KNAPSACK`.  "
    ]
   },
   {
