--- a/02_knapsack_2D_stochastic.ipynb
+++ b/02_knapsack_2D_stochastic.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# The Knapsack Problem: Stochastic Search\n",
+    "\n",
+    "\n",
+    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/f/fd/Knapsack.svg\" width=300>\n",
+    "\n",
+    "Here you will learn about implementing Pareto Optimisation into a Genetic Algorithm.  \n",
+    "\n",
     "This notebook may be used in Google Colab. To access press this button:    \n",
     "<a href=\"https://colab.research.google.com/github/elzurdo/multi_objective_optimisation/blob/master/02_knapsack_2D_stochastic.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"First: Open In Colab\"/></a>"
    ]
@@ -58,7 +65,6 @@
     "\n",
     "Here we setup our problem of solving for the knapsack problem in an exhaustive search space. \n",
     "\n",
-    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/f/fd/Knapsack.svg\" width=\"300\">\n",
     "\n",
     " * `packages` a dictionary containing information of the `N_PACKAGES` packages.\n",
     " It has the form `{key: package}`, where each package have the form `{'weight': weight, 'value': value}`\n",
@@ -576,10 +582,12 @@
     "pareto_instances\n",
     "\n",
     "knapsacks_pareto = {}\n",
+    "instance_pareto_details = {}\n",
     "for idx_instance in knapsacks_instances:\n",
     "    for idx_knapsack in pareto_instances[idx_instance]:\n",
     "        idx_pareto = f'{idx_instance}-{idx_knapsack}'\n",
     "        knapsacks_pareto[idx_pareto] = knapsacks_instances[idx_instance][idx_knapsack]\n",
+    "        instance_pareto_details[idx_pareto] = idx_instance\n",
     "\n",
     "\n",
     "knapsacks_pareto_pareto = knapsacks_to_pareto_front(knapsacks_pareto)"
@@ -626,6 +634,9 @@
     "plt.scatter([knapsacks_pareto[idx_knapsack]['weight'] for idx_knapsack in knapsacks_pareto_pareto], \n",
     "            [knapsacks_pareto[idx_knapsack]['value'] for idx_knapsack in knapsacks_pareto_pareto], \n",
     "        marker='x', s=100, linewidth=4, color='green', label=f'Pareto Front when combining all {n_instances} instances')\n",
+    "\n",
+    "for idx_knapsack in knapsacks_pareto_pareto:\n",
+    "    plt.annotate(instance_pareto_details[idx_knapsack], [knapsacks_pareto[idx_knapsack]['weight'] + 0.5, knapsacks_pareto[idx_knapsack]['value']], fontsize=20, color='green')\n",
     "\n",
     "plt.xlabel('weight [kg]')\n",
     "plt.ylabel('value [£]')\n",
