knapsacks_to_pareto_front updated
took out the double negatives

--- a/02_knapsack_2D_stochastic.ipynb
+++ b/02_knapsack_2D_stochastic.ipynb
@@ -443,7 +443,7 @@
     }
    ],
    "source": [
-    "mode_to_operator = {'min': greater_than, 'max': less_than}\n",
+    "mode_to_operator = {'min': less_than, 'max': greater_than}\n",
     "\n",
     "objective_mode = {'weight': 'min', 'value': 'max'}\n",
     "\n",
@@ -473,7 +473,7 @@
     "    idx_objects = list(knapsacks.keys())\n",
     "\n",
     "    for idx in range(len(objective_values[objective])):\n",
-    "        is_dominated = False\n",
+    "        is_pareto = True\n",
     "\n",
     "        this_weight = objective_values['weight'][idx]\n",
     "        this_value = objective_values['value'][idx]\n",
@@ -482,13 +482,13 @@
     "        other_values = np.array(objective_values['value'][:idx] + objective_values['value'][idx + 1:])\n",
     "\n",
     "        for jdx in range(len(other_weights)):\n",
-    "            bool_ = objective_operator['weight'](this_weight, other_weights[jdx]) & objective_operator['value'](this_value, other_values[jdx])   \n",
+    "            other_dominates = objective_operator['weight'](other_weights[jdx], this_weight) & objective_operator['value'](other_values[jdx], this_value)   \n",
     "\n",
-    "            if bool_:\n",
-    "                is_dominated = True\n",
+    "            if other_dominates:\n",
+    "                is_pareto = False\n",
     "                break\n",
     "\n",
-    "        if not is_dominated:\n",
+    "        if is_pareto:\n",
     "            idxs_pareto.append(idx_objects[idx])\n",
     "            \n",
     "    return idxs_pareto"
