bugs corrected. replication prob zero and plotting all parents and children

--- a/02_knapsack_2D_stochastic.ipynb
+++ b/02_knapsack_2D_stochastic.ipynb
@@ -1311,7 +1311,10 @@
     "    idxs_chidren['replicated'] = np.arange(idx_indv_start, idx_indv_start + len(idxs_parents['replicate']))\n",
     "    population_children = {idxs_chidren['replicated'][counter]: population_parents[idx_indv] for counter, idx_indv in enumerate(idxs_parents['replicate'])}\n",
     "\n",
-    "    idx_indv_max = np.max(idxs_chidren['replicated'])\n",
+    "    if idxs_chidren['replicated']:\n",
+    "        idx_indv_max = np.max(idxs_chidren['replicated'])\n",
+    "    else:\n",
+    "        idx_indv_max = idx_indv_start\n",
     "    \n",
     "    # children mutated\n",
     "    idxs_chidren['mutated'] = np.arange(idx_indv_max + 1, idx_indv_max + 1 + len(idxs_parents['mutate']))\n",
@@ -1426,8 +1429,8 @@
     "        \n",
     "        if gen_num in [0, n_generations - 1]:   \n",
     "            label = f'parents+children gen {gen_num + 1}'\n",
-    "            plt.scatter([knapsacks['weight'] for _, knapsacks in population_parents.items()],\n",
-    "                            [knapsacks['value'] for _, knapsacks in population_parents.items()],\n",
+    "            plt.scatter([knapsacks['weight'] for _, knapsacks in population_parents_and_children.items()],\n",
+    "                            [knapsacks['value'] for _, knapsacks in population_parents_and_children.items()],\n",
     "                             s=100, alpha=alpha, color='green', label=label, marker='x')\n",
     "            label= f'pareto front gen {gen_num + 1}'\n",
     "        else:\n",
