replicted empty list correction, parents competing option

--- a/02_knapsack_2D_stochastic.ipynb
+++ b/02_knapsack_2D_stochastic.ipynb
@@ -1271,10 +1271,11 @@
    },
    "outputs": [],
    "source": [
-    "PROB_CROSS_OVER = 0.6\n",
-    "PROB_MUTATION = 0.3\n",
+    "PROB_CROSS_OVER = 0.6    # probability that any parent may craete a child by mating with another parent\n",
+    "PROB_MUTATION = 0.3     # probability that any parent may create a child by mutating itself\n",
     "\n",
-    "N_PACKAGES_MUTATE = 2\n",
+    "N_PACKAGES_MUTATE = 2    # number of packages used for the process of mutation\n",
+    "PARENTS_COMPETE = True   # True: parents will compete for selection with the children. False: only children compete\n",
     "\n",
     "def naive_pareto_selector(population, n_select=20, exact_n_selection = False):\n",
     "    population_remaining = population.copy()\n",
@@ -1308,14 +1309,14 @@
     "        n_packages_mutate = N_PACKAGES_MUTATE\n",
     "    \n",
     "    # children replicated\n",
-    "    idxs_chidren['replicated'] = np.arange(idx_indv_start, idx_indv_start + len(idxs_parents['replicate']))\n",
+    "    idxs_chidren['replicated'] = list(np.arange(idx_indv_start, idx_indv_start + len(idxs_parents['replicate'])))\n",
     "    population_children = {idxs_chidren['replicated'][counter]: population_parents[idx_indv] for counter, idx_indv in enumerate(idxs_parents['replicate'])}\n",
     "\n",
     "    if idxs_chidren['replicated']:\n",
     "        idx_indv_max = np.max(idxs_chidren['replicated'])\n",
     "    else:\n",
     "        idx_indv_max = idx_indv_start\n",
-    "    \n",
+    "        \n",
     "    # children mutated\n",
     "    idxs_chidren['mutated'] = np.arange(idx_indv_max + 1, idx_indv_max + 1 + len(idxs_parents['mutate']))\n",
     "\n",
@@ -1344,10 +1345,15 @@
     "    return population_children, idxs_chidren\n",
     "    \n",
     "\n",
-    "def population_tranformations_idxs(idxs_parents, cx_prob, mutate_prob, seed=None):\n",
+    "def population_tranformations_idxs(idxs_parents, cx_prob, mutate_prob, parents_compete=True, seed=None):\n",
     "    np.random.seed(seed)\n",
     "    \n",
-    "    replicate_prob = 1. - cx_prob - mutate_prob\n",
+    "    if parents_compete:\n",
+    "        # no need for replicates\n",
+    "        replicate_prob = 0\n",
+    "        mutate_prob = 1. - cx_prob  # we are concerned with only mutating a mating\n",
+    "    else:\n",
+    "        replicate_prob = 1. - cx_prob - mutate_prob\n",
     "    \n",
     "    transformation_idxs_parents = {}\n",
     "    \n",
@@ -1375,7 +1381,15 @@
    },
    "outputs": [],
    "source": [
-    "def knapsack_genetic_algorithm(n_generations, n_initial_poppulation=None, n_packages_mutate=None, cx_prob=None, mutate_prob=None, seed=None, exact_n_selection=False):\n",
+    "def _update_log(gen_num, this_gen, all_gens):\n",
+    "    for idx_indv in this_gen:\n",
+    "        if 'generations' not in all_gens[idx_indv]:\n",
+    "            all_gens[idx_indv]['generations'] = [] \n",
+    "        all_gens[idx_indv]['generations'].append(gen_num)\n",
+    "    \n",
+    "def knapsack_genetic_algorithm(n_generations, n_initial_poppulation=None, n_packages_mutate=None, \n",
+    "                               cx_prob=None, mutate_prob=None, seed=None, exact_n_selection=False, \n",
+    "                               parents_compete=None):\n",
     "    if not cx_prob:\n",
     "        cx_prob = PROB_CROSS_OVER\n",
     "    if not mutate_prob:\n",
@@ -1384,6 +1398,8 @@
     "        n_packages_mutate = N_PACKAGES_MUTATE\n",
     "    if not n_initial_poppulation: \n",
     "        n_initial_poppulation = N_INITIAL_POPULATION\n",
+    "    if parents_compete is None:\n",
+    "        parents_compete = PARENTS_COMPETE\n",
     "        \n",
     "    population_parents = create_knapsacks(n_initial_poppulation, seed=seed)\n",
     "    \n",
@@ -1393,8 +1409,8 @@
     "        idx_indv_max = np.max(list(population_all_generations.keys())) # keeps track of highest valued individual\n",
     "    \n",
     "        # dictionary containing the the transofrmations (replicate, mutate, mate) and the idxs of parents that will go through each transformation\n",
-    "        idxs_parents_tranformations = population_tranformations_idxs(set(population_parents.keys()), cx_prob, mutate_prob, seed=seed)\n",
-    "    \n",
+    "        idxs_parents_tranformations = population_tranformations_idxs(set(population_parents.keys()), cx_prob, mutate_prob, parents_compete=parents_compete, seed=seed)\n",
+    "        \n",
     "        # generating the children popultation basedon the tranformation of the parents \n",
     "        population_children, idxs_chidren = create_children(idx_indv_max + 1, idxs_parents_tranformations, population_parents, n_packages_mutate=n_packages_mutate)\n",
     "        \n",
@@ -1409,17 +1425,17 @@
     "                if objective not in indv:\n",
     "                    knapsack_objective(indv, objective, packages)\n",
     "                    \n",
-    "                \n",
-    "        # pooling parents and children together\n",
-    "        population_parents_and_children = {**population_parents, **population_children}\n",
+    "        if parents_compete:\n",
+    "            # pooling parents and children together to compete for selection\n",
+    "            population_competing = {**population_parents, **population_children} # was called population_parents_and_children\n",
+    "            _update_log(gen_num, population_competing, population_all_generations)\n",
+    "        else:\n",
+    "            # only children compete for selection\n",
+    "            population_competing = population_children.copy()\n",
+    "            _update_log(gen_num, {**population_parents, **population_children}, population_all_generations)\n",
     "\n",
-    "        for idx_indv in population_parents_and_children:\n",
-    "            if 'generations' not in population_all_generations[idx_indv]:\n",
-    "                population_all_generations[idx_indv]['generations'] = []   \n",
-    "            population_all_generations[idx_indv]['generations'].append(gen_num)\n",
-    "        \n",
     "        # selecting the \n",
-    "        pareto_fronts, individuals_selected = naive_pareto_selector(population_parents_and_children, \n",
+    "        pareto_fronts, individuals_selected = naive_pareto_selector(population_competing, \n",
     "                          n_select=len(population_parents), exact_n_selection=exact_n_selection)\n",
     "\n",
     "        \n",
@@ -1427,16 +1443,23 @@
     "        \n",
     "        alpha = (1. - gen_num/n_generations)\n",
     "        \n",
-    "        if gen_num in [0, n_generations - 1]:   \n",
+    "        if gen_num in [0, n_generations - 1]: \n",
+    "            if 0 == gen_num:\n",
+    "                marker = 's'\n",
+    "                size = 40\n",
+    "            else:\n",
+    "                marker = 'x'\n",
+    "                size = 100\n",
+    "            \n",
     "            label = f'parents+children gen {gen_num + 1}'\n",
-    "            plt.scatter([knapsacks['weight'] for _, knapsacks in population_parents_and_children.items()],\n",
-    "                            [knapsacks['value'] for _, knapsacks in population_parents_and_children.items()],\n",
-    "                             s=100, alpha=alpha, color='green', label=label, marker='x')\n",
+    "            plt.scatter([knapsacks['weight'] for _, knapsacks in population_competing.items()],\n",
+    "                            [knapsacks['value'] for _, knapsacks in population_competing.items()],\n",
+    "                             s=size, alpha=0.7, color='green', label=label, marker=marker, linewidth=4)\n",
     "            label= f'pareto front gen {gen_num + 1}'\n",
     "        else:\n",
     "            label = None\n",
     "\n",
-    "        knapsacks_to_sort = {idx_indv: population_parents_and_children[idx_indv] for idx_indv in population_parents_and_children if idx_indv in pareto_fronts[0]}\n",
+    "        knapsacks_to_sort = {idx_indv: population_competing[idx_indv] for idx_indv in population_competing if idx_indv in pareto_fronts[0]}\n",
     "        knapsacks_sorted_by_weight = {k: v for k, v in sorted(knapsacks_to_sort.items(), key=lambda knapsack: knapsack[1]['weight'], reverse=False)}\n",
     "        plt.plot([knapsacks['weight'] for _, knapsacks in knapsacks_sorted_by_weight.items()],\n",
     "                 [knapsacks['value'] for _, knapsacks in knapsacks_sorted_by_weight.items()], '-o',\n",
@@ -1445,7 +1468,7 @@
     "        \n",
     "        \n",
     "        # next generation\n",
-    "        population_parents = {idx_indv: population_parents_and_children[idx_indv] for idx_indv in population_parents_and_children.keys() if idx_indv in individuals_selected}\n",
+    "        population_parents = {idx_indv: population_competing[idx_indv] for idx_indv in population_competing.keys() if idx_indv in individuals_selected}\n",
     "        \n",
     "    plt.legend()\n",
     "    plt.xlabel('weight [kg]')\n",
