--- a/02_knapsack_2D_stochastic.ipynb
+++ b/02_knapsack_2D_stochastic.ipynb
@@ -1271,11 +1271,16 @@
    },
    "outputs": [],
    "source": [
-    "PROB_CROSS_OVER = 0.6    # probability that any parent may craete a child by mating with another parent\n",
-    "PROB_MUTATION = 0.3     # probability that any parent may create a child by mutating itself\n",
-    "\n",
-    "N_PACKAGES_MUTATE = 2    # number of packages used for the process of mutation\n",
+    "# -- selection --\n",
     "PARENTS_COMPETE = True   # True: parents will compete for selection with the children. False: only children compete\n",
+    "\n",
+    "# -- mating --\n",
+    "PROB_CROSS_OVER = 0.6    # probability that any parent may craete a child by mating with another parent\n",
+    "\n",
+    "# -- mutation --\n",
+    "PROB_MUTATION = 0.3      # probability that any parent may create a child by mutating itself\n",
+    "N_PACKAGES_MUTATE = 2    # number of packages used for the process of mutation\n",
+    "\n",
     "\n",
     "def naive_pareto_selector(population, n_select=20, exact_n_selection = False):\n",
     "    population_remaining = population.copy()\n",
@@ -1408,6 +1413,7 @@
     "    for gen_num in range(n_generations):\n",
     "        idx_indv_max = np.max(list(population_all_generations.keys())) # keeps track of highest valued individual\n",
     "    \n",
+    "        # --- population tranformations ---\n",
     "        # dictionary containing the the transofrmations (replicate, mutate, mate) and the idxs of parents that will go through each transformation\n",
     "        idxs_parents_tranformations = population_tranformations_idxs(set(population_parents.keys()), cx_prob, mutate_prob, parents_compete=parents_compete, seed=seed)\n",
     "        \n",
@@ -1419,12 +1425,14 @@
     "                population_all_generations[idx_indv] = {} \n",
     "                population_all_generations[idx_indv]['packages'] = population_children[idx_indv]['packages']\n",
     "        \n",
-    "        # evaluating the children fitness\n",
+    "        # --- evaluating the children fitness ---\n",
     "        for idx_indv, indv in population_children.items():\n",
     "            for objective in objectives:\n",
     "                if objective not in indv:\n",
     "                    knapsack_objective(indv, objective, packages)\n",
     "                    \n",
+    "        # --- selection ---\n",
+    "        # population for selection\n",
     "        if parents_compete:\n",
     "            # pooling parents and children together to compete for selection\n",
     "            population_competing = {**population_parents, **population_children} # was called population_parents_and_children\n",
@@ -1434,12 +1442,12 @@
     "            population_competing = population_children.copy()\n",
     "            _update_log(gen_num, {**population_parents, **population_children}, population_all_generations)\n",
     "\n",
-    "        # selecting the \n",
+    "        # the selection \n",
     "        pareto_fronts, individuals_selected = naive_pareto_selector(population_competing, \n",
     "                          n_select=len(population_parents), exact_n_selection=exact_n_selection)\n",
     "\n",
     "        \n",
-    "        # plotting \n",
+    "        # --- plotting ---\n",
     "        \n",
     "        alpha = (1. - gen_num/n_generations)\n",
     "        \n",
@@ -1467,7 +1475,7 @@
     "\n",
     "        \n",
     "        \n",
-    "        # next generation\n",
+    "        # --- next generation ---\n",
     "        population_parents = {idx_indv: population_competing[idx_indv] for idx_indv in population_competing.keys() if idx_indv in individuals_selected}\n",
     "        \n",
     "    plt.legend()\n",
@@ -1501,7 +1509,10 @@
     }
    ],
    "source": [
-    "population_all = knapsack_genetic_algorithm(20, seed=1, exact_n_selection=True)"
+    "n_generations = 20\n",
+    "parents_compete = True\n",
+    "\n",
+    "population_all = knapsack_genetic_algorithm(n_generations, seed=1, exact_n_selection=True, parents_compete=parents_compete)"
    ]
   },
   {
