--- a/01_knapsack 2D_exhaustive.ipynb
+++ b/01_knapsack 2D_exhaustive.ipynb
@@ -434,8 +434,8 @@
    },
    "outputs": [],
    "source": [
-    "def knapsack_to_soh(package):\n",
-    "    return package['value'] / package['weight']\n",
+    "def knapsack_to_soh(knapsack):\n",
+    "    return knapsack['value'] / knapsack['weight']\n",
     "\n",
     "knapsacks_soh = {iknapsack: knapsack_to_soh(knapsack) for iknapsack, knapsack in knapsacks.items()}"
    ]
@@ -1019,18 +1019,10 @@
   },
   "toc": {
    "base_numbering": 1,
-   "colors": {
-    "hover_highlight": "#DAA520",
-    "running_highlight": "#FF0000",
-    "selected_highlight": "#FFD700"
-   },
-   "moveMenuLeft": true,
    "nav_menu": {},
-   "navigate_menu": true,
    "number_sections": true,
    "sideBar": true,
    "skip_h1_title": false,
-   "threshold": 4,
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
@@ -1041,8 +1033,7 @@
     "width": "272.003px"
    },
    "toc_section_display": true,
-   "toc_window_display": true,
-   "widenNotebook": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
